objects/Exit__c.object
<CustomObject>
    <fields>
        <fullName>API_AftercareProvided__c</fullName>
        <formula>Text( Aftercare_Provided__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_AftercareProvided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AskedOrForcedToExchangeForSex__c</fullName>
        <formula>TRIM( LEFT( TEXT(   AskedOrForcedToExchangeForSex__c   ) , FIND( &quot;:&quot;, TEXT(  AskedOrForcedToExchangeForSex__c  ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_AskedOrForcedToExchangeForSex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AskedOrForcedToExchangeFor_SexPastTh__c</fullName>
        <formula>TRIM( LEFT( TEXT( AskedOrForcedToExchangeFor_SexPastThreeM__c ) , FIND( &quot;:&quot;, TEXT( AskedOrForcedToExchangeFor_SexPastThreeM__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_AkedOrForcedToExchangeFor SexPast3M</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CMExitReason__c</fullName>
        <formula>Text( CM_Exit_Reason__c )</formula>
        <label>API_CMExitReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CoercedToContinueWork__c</fullName>
        <formula>TRIM( LEFT( TEXT(  CoercedToContinueWork__c  ) , FIND( &quot;:&quot;, TEXT(  CoercedToContinueWork__c  ))-1) )</formula>
        <label>API_CoercedToContinueWork</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CounselingReceived__c</fullName>
        <formula>TRIM(LEFT(TEXT( CounselingReceived__c),FIND(&quot;:&quot;, TEXT( CounselingReceived__c))-1))</formula>
        <label>API_CounselingReceived</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CountOfExchangeForSex__c</fullName>
        <formula>Text(CountOfExchangeForSex__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_CountOfExchangeForSex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DestinationSafeClient__c</fullName>
        <formula>TRIM( LEFT( TEXT( DestinationSafeClient__c ) , FIND( &quot;:&quot;, TEXT(DestinationSafeClient__c ))-1) )</formula>
        <label>API_DestinationSafeClient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DestinationSafeWorker__c</fullName>
        <formula>TRIM(LEFT(TEXT(DestinationSafeWorker__c),FIND(&quot;:&quot;, TEXT(DestinationSafeWorker__c))-1))</formula>
        <label>API_DestinationSafeWorker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DestinationSubsidyType__c</fullName>
        <formula>TRIM(LEFT(TEXT( DestinationSubsidyType__c ),FIND(&quot;:&quot;, TEXT( DestinationSubsidyType__c))-1))</formula>
        <label>API_DestinationSubsidyType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Destination__c</fullName>
        <formula>TRIM(LEFT(TEXT(Destination__c),FIND(&quot;:&quot;, TEXT(Destination__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EarlyExitReason__c</fullName>
        <formula>TRIM(LEFT(TEXT(EarlyExitReason__c ),FIND(&quot;:&quot;, TEXT(EarlyExitReason__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_EarlyExitReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EmailSocialMedia__c</fullName>
        <formula>TRIM(LEFT(TEXT(EmailSocialMedia__c),FIND(&quot;:&quot;, TEXT(EmailSocialMedia__c))-1))</formula>
        <label>API_EmailSocialMedia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ExchangeForSexPastThreeMo_nths__c</fullName>
        <formula>TRIM( LEFT( TEXT(ExchangeForSexPastThreeMonths__c ) , FIND( &quot;:&quot;, TEXT(ExchangeForSexPastThreeMonths__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_ExchangeForSexPastThreeMo nths</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ExchangeForSex__c</fullName>
        <formula>TRIM( LEFT( TEXT( ExchangeForSex__c ) , FIND( &quot;:&quot;, TEXT(ExchangeForSex__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_ExchangeForSex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FamilyCounseling__c</fullName>
        <formula>TRIM(LEFT(TEXT( FamilyCounseling__c ),FIND(&quot;:&quot;, TEXT( FamilyCounseling__c ))-1))</formula>
        <label>API_FamilyCounseling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_GroupCounseling__c</fullName>
        <formula>TRIM(LEFT(TEXT( GroupCounseling__c ),FIND(&quot;:&quot;, TEXT( GroupCounseling__c))-1))</formula>
        <label>API_GroupCounseling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_HousingAssessment__c</fullName>
        <formula>TRIM(LEFT(TEXT( HousingAssessment__c ),FIND(&quot;:&quot;, TEXT( HousingAssessment__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_HousingAssessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_InPersonGroup__c</fullName>
        <formula>TRIM(LEFT(TEXT( InPersonGroup__c ),FIND(&quot;:&quot;, TEXT( InPersonGroup__c))-1))</formula>
        <label>API_InPersonGroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_InPersonIndividual__c</fullName>
        <formula>TRIM(LEFT(TEXT( InPersonIndividual__c ),FIND(&quot;:&quot;, TEXT( InPersonIndividual__c))-1))</formula>
        <label>API_InPersonIndividual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IndividualCounseling__c</fullName>
        <formula>TRIM(LEFT(TEXT( IndividualCounseling__c ),FIND(&quot;:&quot;, TEXT( IndividualCounseling__c))-1))</formula>
        <label>API_IndividualCounseling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LaborExploitPastThreeMonths__c</fullName>
        <formula>TRIM( LEFT( TEXT(  LaborExploitPastThreeMonths__c  ) , FIND( &quot;:&quot;, TEXT(  LaborExploitPastThreeMonths__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_LaborExploitPastThreeMonths</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherDestination__c</fullName>
        <formula>If(NOT(ISBLANK(  OtherDestination__c  )),( OtherDestination__c ),&quot;&quot;)</formula>
        <label>API_OtherDestination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PosAdultConnections__c</fullName>
        <formula>TRIM(LEFT(TEXT(PosAdultConnections__c),FIND(&quot;:&quot;, TEXT(PosAdultConnections__c))-1))</formula>
        <label>API_PosAdultConnections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PosCommunityConnections__c</fullName>
        <formula>TRIM(LEFT(TEXT(PosCommunityConnections__c),FIND(&quot;:&quot;, TEXT(PosCommunityConnections__c))-1))</formula>
        <label>API_PosCommunityConnections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PosPeerConnections__c</fullName>
        <formula>TRIM(LEFT(TEXT(PosPeerConnections__c),FIND(&quot;:&quot;, TEXT(PosPeerConnections__c))-1))</formula>
        <label>API_PosPeerConnections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PostExitCounselingPlan__c</fullName>
        <formula>TRIM(LEFT(TEXT(PostExitCounselingPlan__c),FIND(&quot;:&quot;, TEXT(PostExitCounselingPlan__c ))-1))</formula>
        <label>API_PostExitCounselingPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ProjectCompletionStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT( ProjectCompletionStatus__c ),FIND(&quot;:&quot;, TEXT( ProjectCompletionStatus__c))-1))</formula>
        <label>API_ProjectCompletionStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SessionsInPlan__c</fullName>
        <formula>Text( SessionsInPlan__c )</formula>
        <label>API_SessionsInPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SubsidyInformation__c</fullName>
        <formula>TRIM(LEFT(TEXT( SubsidyInformation__c ),FIND(&quot;:&quot;, TEXT( SubsidyInformation__c ))-1))</formula>
        <label>API_SubsidyInformation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Telephone__c</fullName>
        <formula>TRIM(LEFT(TEXT( Telephone__c ),FIND(&quot;:&quot;, TEXT( Telephone__c ))-1))</formula>
        <label>API_Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_WorkplacePromiseDifference__c</fullName>
        <formula>TRIM( LEFT( TEXT( WorkplacePromiseDifference__c ) , FIND( &quot;:&quot;, TEXT(WorkplacePromiseDifference__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_WorkplacePromiseDifference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_WorkplaceViolenceThreats__c</fullName>
        <formula>TRIM( LEFT( TEXT(WorkplaceViolenceThreats__c ) , FIND( &quot;:&quot;, TEXT(WorkplaceViolenceThreats__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_WorkplaceViolenceThreats</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AftercareDate__c</fullName>
        <formula>If(NOT(ISBLANK(Aftercare_Date__c)),

TEXT(YEAR( Aftercare_Date__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(Aftercare_Date__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(Aftercare_Date__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AftercareDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aftercare_Date__c</fullName>
        <label>Aftercare Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aftercare_Provided__c</fullName>
        <label>Aftercare Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Client prefers not to answer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AskedOrForcedToExchangeForSex__c</fullName>
        <label>Asked or Forced to Exchange for Sex</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ExchangeForSex__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AskedOrForcedToExchangeFor_SexPastThreeM__c</fullName>
        <label>Asked/Forced Exchange Sex Past 3 Month</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ExchangeForSex__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_Exit_Reason__c</fullName>
        <label>CM Exit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Accomplished goals and/or obtained services and no longer needs CM</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Transferred to another HUD/VASH program site</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Found/chose other housing</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Did not comply with HUD/VASH CM</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Eviction and/or other housing related issues</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Unhappy with HUD/VASH housing</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>No longer financially eligible for HUD/VASH voucher</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>No longer interested in participating in this program</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Veteran cannot be located</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Veteran too ill to participate at this time</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Veteran is incarcerated</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Veteran is deceased</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoercedToContinueWork__c</fullName>
        <label>Coerced to Continue Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselingReceived__c</fullName>
        <label>Counseling Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountOfExchangeForSex__c</fullName>
        <label>Count of Exchange for Sex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DestinationSafeClient__c</fullName>
        <label>Destination Safe Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DestinationSafeWorker__c</fullName>
        <label>Destination Safe Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisWorkerResponse</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DestinationSubsidyType__c</fullName>
        <label>Destination Subsidy Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Destination__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisRentalSubsidyTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DestinationType__c</fullName>
        <label>Destination Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless Situation</fullName>
                </value>
                <value>
                    <fullName>Institutional Situations</fullName>
                </value>
                <value>
                    <fullName>Temporary Housing Situation</fullName>
                </value>
                <value>
                    <fullName>Permanent Housing Situation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DestinationType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisLivingSituationOptionList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EarlyExitReason__c</fullName>
        <label>Early Exit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisExpelledReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailSocialMedia__c</fullName>
        <label>Email Social Media</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentID__c</fullName>
        <formula>Program_Enrollment__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnrollmentID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExchangeForSexPastThreeMonths__c</fullName>
        <label>Exchange for Sex Past 3 Months</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ExchangeForSex__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExchangeForSex__c</fullName>
        <label>Exchange for Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExitDate__c</fullName>
        <formula>If(NOT(ISBLANK( Exit_Date__c )),

TEXT(YEAR( Exit_Date__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(Exit_Date__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(Exit_Date__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExitDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyCounseling__c</fullName>
        <label>Family Counseling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupCounseling__c</fullName>
        <label>Group Counseling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HousingAssessment__c</fullName>
        <label>Housing Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisHousingAssessmentAtExit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InPersonGroup__c</fullName>
        <label>In Person Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InPersonIndividual__c</fullName>
        <label>In Person Individual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IndividualCounseling__c</fullName>
        <label>Individual Counseling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LaborExploitPastThreeMonths__c</fullName>
        <label>Labor Exploit Past 3 Months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherDestination__c</fullName>
        <label>Other Destination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exit</relationshipLabel>
        <relationshipName>Exit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonalID__c</fullName>
        <formula>Program_Enrollment__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PersonalID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PosAdultConnections__c</fullName>
        <label>Pos Adult Connections</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisWorkerResponse</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PosCommunityConnections__c</fullName>
        <label>Pos Community Connections</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisWorkerResponse</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PosPeerConnections__c</fullName>
        <label>Pos Peer Connections</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisWorkerResponse</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostExitCounselingPlan__c</fullName>
        <label>Post Exit Counseling Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>ProgramEnrollment</referenceTo>
        <relationshipLabel>Exit</relationshipLabel>
        <relationshipName>Exit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectCompletionStatus__c</fullName>
        <label>Project Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisProjectCompletionStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SessionCountAtExit__c</fullName>
        <label>Session Count at Exit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionsInPlan__c</fullName>
        <label>Sessions in Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubsidyInformation__c</fullName>
        <label>Subsidy Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisSubsidyInformation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkplacePromiseDifference__c</fullName>
        <label>Workplace Promise Difference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkplaceViolenceThreats__c</fullName>
        <label>Workplace Violence Threats</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <label>Exit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Exit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>